# deepseek_app

./: .gitignore  index.html  package.json  readme.md
.github/workflows/: build-macos.yml  build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.ai  icon.icns
src-tauri/src/: lib.rs  main.rs
